syntax = "proto3";

package auth;

option go_package = "github.com/yahn1ukov/scribble/proto/auth";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string email = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  string password = 4;
}

message RegisterResponse {
  string token = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}
